manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: xsoar-ui
  namespace: xsoar
spec:
  gateways:
  - istio-system/dataplane
  hosts:
  - xsoar.vp.bigbang.dev
  tls:
  - match:
    - port: 443
      sniHosts:
      - xsoar.vp.bigbang.dev
    route:
      - destination:
          host: xsoar.xsoar.svc.cluster.local
          port:
            number: 8888
